--- a/index.css
+++ b/index.css
@@ -1,32 +1,75 @@
 body{
-  background-color: black;
+  background-color: white;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-a{
-  text-decoration: none;
-  color: white;
+.container{
+  background-color: #1c226;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  height: 100vh;
+  padding-right: 2vw;
+  box-sizing: border-box;
+  padding-top: 5vw;
+  padding-left: 1.5vw;
+  
+
 }
 .navbar{
-   
-    top: 7em; 
-   /* right: 5em; */
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    place-items: center;
-    background-color: red;  
-}
-.home,.category,.currency{
-  width: 10vw;
-  height: 10vw;
-  padding: 10vw 1vw 15vw 10vw;
-  display: flex;
+  position: fixed;
+  top: 1em; 
+  right: 26vw; 
+  display:flex;
   justify-content:center;
-  align-items:center;
-  place-items: center;
+  align-items:center;  
+  z-index: 2;
+     
 }
-span{
-  visibility: hidden;
+nav{
+  flex: 1;
+  text-align: right;
+}
+nav ul li{
+  list-style: none;
+  display: inline-block;
+  margin-left: 6vw;
+  font-size: 4vw;
+  
+}    
+.page li a{
+  text-decoration: none ;
+  color: white;
+  background-color: transparent;
+  // border: 0.063em solid white;
+  width: 10em;
+  height: 10em;
+  padding-left: 2vw;
+  padding-right: 2vw;
+  padding-bottom: 2vw;
+  padding-top: 2vw;
+  border-radius: 100vw;
+  
+}
+
+/* .page a:hover {
+  border: .7vw solid transparent;
+  color: white;
+  box-shadow: 0.063em 0.063em 2.52em  #14EACFFF,
+    0.063em 0.063em 5.04em #14EACFFF;
+// animation: anime 1s linear infinite;
+ margin-top: 10vw;
+} */
+#home{
+  width: 2em;
+  height: 4em;
+}
+#category{
+  width: 2em;
+  height: 4em;
+}
+#currency{
+  width: 2em;
+  height: 4em;
 }
